# ComputerVision4Melson

./: .gitignore  README.md
src/ball_detector/: README.md  package.xml  setup.py
src/ball_detector/ball_detector/: ball_detector.py
src/control/: CMakeLists.txt  package.xml
src/control/msg/: Control.msg
src/control/src/: start_signal_publisher.cpp
src/custom_msg_and_srv/: CMakeLists.txt  package.xml
src/custom_msg_and_srv/msg/: PersonFace.msg  PersonFaceList.msg
src/hand_signal_detector/: README.md  package.xml  setup.cfg  setup.py
src/hand_signal_detector/hand_signal_detector/: hand_gesture_processor.py  hand_signal_detector.py
src/hand_signal_detector/resource/: .gitignore  Hand_Detector.svm  Hand_Detector_1.svm  create_traing_dataset.py  train_hand_detector.py
src/palm_signal_recognition/: package.xml  setup.cfg  setup.py
src/palm_signal_recognition/palm_signal_recognition/: palm_signal_recognition.py
src/person_recognition/: README.md  package.xml  setup.cfg  setup.py
src/person_recognition/person_recognition/: person_recognition.py
src/person_recognition/person_recognition/resource/: embeddings.pickle  le.pickle  recognizer.pickle
src/single_camera/: CMakeLists.txt  README.md  package.xml
src/single_camera/launch/: two_camera_publishers_launch.py
src/single_camera/src/: camera_publisher.cpp  camera_subscriber.cpp  single_camera.cpp
src/single_camera_python_subscriber/: package.xml  setup.cfg  setup.py
src/single_camera_python_subscriber/single_camera_python_subscriber/: camera_subscriber.py
(+3 files in other folders)
